add cru to database
